alignment issue fixed

--- a/src/app/Product-sticker-list/product-list-table/product-list-table.component.css
+++ b/src/app/Product-sticker-list/product-list-table/product-list-table.component.css
@@ -1,7 +1,8 @@
 .product-table-container {
-    padding: 20px;
+    /* padding: 20px; */
     overflow-x: auto;
     width: 100%;
+    padding: 0 4rem;
 }
 
 .product-table {
